[package]
name = "anychain-solana"
description = "A Rust library for Solana-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.0"
keywords = ["solana", "blockchain", "cryptocurrency", "wallet", "transactions"]
authors = ["Shawndslee", "cregis.com"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[dependencies]
anychain-core = { version = "0.1.5" }
ed25519-dalek = { version = "=1.0.1" }
bs58 = { version = "0.4", default-features = false, features = ["check", "alloc"] }
#serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
solana-rpc-client = "1.18.11"
solana-sdk = "1.18.11"