[package]
name = "anychain-solana"
description = "A Rust library for Solana-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.2"
keywords = ["solana", "blockchain", "cryptocurrency", "wallet", "transactions"]
authors = ["Shawndslee", "cregis.com"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[dependencies]
anychain-core = { version = "0.1.5" }
ed25519-dalek = "1.0.1"
bs58 = { version = "0.4", default-features = false, features = ["check", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
solana-sdk = "2.0.0"
bincode = "1.3.3"
rand = "0.8.5"
hex = "0.4.3"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
solana-rpc-client = "2.0.0"
tungstenite = "0.18.0"
url = "2.3.1"