[package]
name = "anychain-solana"
description = "A Rust library for Solana-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
version = "0.1.14"
keywords = ["solana", "blockchain", "wallet", "transactions"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Shawndslee", "cregis.com"]
edition = "2024"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[[example]]
name = "create-account"
path = "examples/create-account.rs"

[dependencies]
anychain-core = { version = "0.1.7" }
curve25519-dalek = { version = "4.1.3", features = ["group"] }
ed25519-dalek = "1.0.1"
bs58 = { version = "0.5.1", default-features = false, features = ["check", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
solana-sdk = "2.0.0"
bincode = "1.3.3"
rand = "0.8.5"
hex = "0.4.3"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
serde_json = "~1"
group = "0.13.0"

[dev-dependencies]
solana-rpc-client = "2.0.1"
solana-rpc-client-api = "2.0.1"
anyhow = "1.0"
tiny-bip39 = "0.8.2"
